fix: fixed issue with background mixin using color

--- a/src/sass/base/_color.scss
+++ b/src/sass/base/_color.scss
@@ -2,7 +2,7 @@
 	.bg--#{$name} {
 		background-color: $color;
 		&-i {
-			color: $color !important;
+			background-color: $color !important;
 		}
 	}
 
