--- a/src/sass/base/_shadow.scss
+++ b/src/sass/base/_shadow.scss
@@ -1,5 +1,5 @@
 @each $size-letter, $size in $sizes {
-	.box-#{$size-letter} {
-		box-shadow: 0 0 $size 10px #{map-get($colors, 'black')};
-	}
+  .shadow-#{$size-letter} {
+    box-shadow: 0 0 $size 2px rgba(map-get($colors, 'black'), .3);
+  }
 }
