--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -106,7 +106,7 @@ figure {
 }
 
 figcaption {
-	@include clr('black-lighter');
+	@include clr('black');
 	@include text('l');
 	font-style: italic;
 }
@@ -130,7 +130,7 @@ ins {
 del {
 	@include bg('red');
 	@include p('h', 'xs');
-	text-decoration: none;
+	text-decoration: line-through;
 
 	&[cite]:after {
 		@include m('l', 'xs');
@@ -164,7 +164,7 @@ a {
 mark {
 	@include p('h', 'xs');
 	@include bg('green');
-	@include clr('black-lighter');
+	@include clr('black');
 }
 
 time {
@@ -194,9 +194,9 @@ time {
 }
 
 .faded {
-	@include clr('black-lightest');
+	@include clr('black');
 
 	& mark {
-		@include bg('green-lightest');
+		@include bg('green');
 	}
 }
